<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SignUpForm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="Username">Username:</string>
    <string name="user">Please enter your username</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="password_enter">Please enter your password</string>
    <string name="confirm_enter">Please confirm your password</string>
</resources>
