<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"

    tools:context=".LoginActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/fields"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/username"
            android:layout_weight="25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Username" />
        <EditText
            android:id="@+id/hint"
            android:layout_weight="75"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/user" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/password"
            android:layout_weight="25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/password" />
    <EditText
        android:id="@+id/password_enter"
        android:layout_weight="75"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_enter"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
        android:id="@+id/confirm"
        android:layout_weight="25"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm" />

        <EditText
            android:id="@+id/confirm_enter"
            android:layout_weight="75"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_enter"/>

        </LinearLayout>
</LinearLayout>

        <Button
        android:id="@+id/Submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_below="@id/fields"
        android:layout_alignRight="@id/fields"
        android:layout_alignEnd="@id/fields" />


</RelativeLayout>
